# RAG

./: .gitignore  README.md  basic_character_chunking.ipynb  main.ipynb  pyproject.toml  rag_eval_Q&A.txt  recursive_character_chunking.ipynb
chroma_store/: chroma.sqlite3
rag_methods/: basic_character_chunking.ipynb  recursive_character_chunking.ipynb  semantic_chunking.ipynb
